new: header font bold

--- a/main/resources/web/style.css
+++ b/main/resources/web/style.css
@@ -52,14 +52,17 @@ body {
 
 * h1 {
 	font-size: 2em;
+	font-weight: bold;
 }
 
 * h2 {
 	font-size: 1.5em;
+	font-weight: bold;
 }
 
 * h3 {
 	font-size: 1.2em;
+	font-weight: bold;
 }
 
 
